--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         
       </footer>
     </main>
-   script>
+   <script>
     if (typeof navigator.serviceWorker !== 'undefined') {
       navigator.serviceWorker.register('sw.js')
     }
