--- a/index.html
+++ b/index.html
@@ -164,11 +164,16 @@
       </footer>
     </main>
    <script>
-    if (typeof navigator.serviceWorker !== 'undefined') {
-      navigator.serviceWorker.register('sw.js')
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then(function (registration) {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch(function (error) {
+          console.error('Service Worker registration failed:', error);
+        });
     }
   </script>
-
 
 
     <script src="https://bundle.run/buffer@6.0.3"></script>
