--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nostryfied</title>
+    <title>NostrSync</title>
     
   </head>
 
