--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Primary Meta Tags -->
-    <title>Nostryfied</title>
+    <title>NostrSync</title>
     <meta name="title" content="Nostr Backup Service by Nostryfied" />
     <meta
       name="description"
