--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     
     <main class="container">
       <div class="header-space">
-        <h1>Nostryfied</h1>
+        <h1>NostrSync</h1>
       </div>
-      <h2><b>Nostryfied</b> offers an <b>Broadcast & Export Service</b> that allows you to <b>Download a 
+      <h2><b>NostrSync</b> offers an <b>Broadcast & Export Service</b> that allows you to <b>Download a 
         Copy of your Data</b> & when you use this service, all of your data will also be <b>Broadcasted to Major Relays</b> 
          on the network. <br><br>This design ensures that the data is <b> Widely Distributed</b> 
          and makes it more <b>Resistant to Censorship.</b>
