--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         Copy of your Data</b> & when you use this service, all of your data will also be <b>Broadcasted to Major Relays</b> 
          on the network. <br><br>This design ensures that the data is <b> Widely Distributed</b> 
          and makes it more <b>Resistant to Censorship.</b> 
-      </h2><a href="file:///Users/iefan/Desktop/Nostryfied-main%202/nostrdb/index.html">Database</a>
+      </h2><a href="/nostrdb/index.html">Database</a>
 
       <div>
         <form>
