--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="dataBase">
 
       
-      <a href="file:///Users/iefan/Desktop/Nostryfied-main%202/nostrdb/index.html">Database</a>
+      <a href="/nostrdb/index.html">Database</a>
       </div>
 
       <div>
