--- a/nostrdb/index.html
+++ b/nostrdb/index.html
@@ -101,7 +101,7 @@
     </h2>
     
     <div class="home">
-    <a href="file:///Users/iefan/Desktop/Nostryfied-main%202/index.html">Home</a>
+    <a href="/index.html">Home</a>
     </div>
 
     <table>
