--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
          and makes it more <b>Resistant to Censorship.</b> 
       </h2>
       <div class="dataBase">
+        <div class="toggle-button">
+          <input type="checkbox" id="relayToggle">
+          <label for="relayToggle">DEEP BACKUP</label>
+        </div>
 
       
       <a href="/nostrdb/index.html">Database</a>
