--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="dataBase">
         <div class="toggle-button">
           <input type="checkbox" id="relayToggle">
-          <label for="relayToggle">DEEP BACKUP</label>
+          <label for="relayToggle">DEEP SYNC</label>
         </div>
 
       
