--- a/nostrdb/index.html
+++ b/nostrdb/index.html
@@ -28,6 +28,7 @@
             font-size: smaller;
             margin: 3%;
             font-weight: 300;
+            line-height: 15pt;
         }
 
 
@@ -73,7 +74,7 @@
 
         .home a {
             display: inline-block;
-            padding: 5px 5px;
+            padding: 3px 5px;
             background-color: #0c53e2; /* Button background color */
             color: #f0ecec; 
             text-decoration: none;
@@ -83,6 +84,7 @@
             border-radius: 25px; 
             cursor: pointer;
             transition: background-color 0.3s;
+            box-shadow: #202124;
         }
 
         .home a:hover {
@@ -125,7 +127,7 @@
     </h2>
     
     <div class="home">
-    <a href="/index.html">Home</a>
+    <a href="file:///Users/iefan/Desktop/Nostryfied-main%202/index.html">Home</a>
     </div>
 
     <table>
