--- a/nostrdb/index.html
+++ b/nostrdb/index.html
@@ -122,7 +122,7 @@
     <h1>NostrSync Database</h1>
     </h2>
     <h2><b>NostrSync database</b> will help you organize and manage your <b>backup files within this App.</b> Everything will be <b>stored locally,</b>
-        and you can also  <b> access this data offline</b>
+        and you can also  <b> access this data offline.</b>
         
     </h2>
     
