--- a/nostrdb/index.html
+++ b/nostrdb/index.html
@@ -36,14 +36,15 @@
             border-collapse: collapse;
             background-color: #000;
             box-shadow: 0 0 10px rgba(0, 255, 0, 0.1);
+           
         }
 
         th,
         td {
-            padding: 10px;
-            text-align: left;
+            padding: 7px;
+            text-align: center;
             color: #00ff00;
-            font-weight: 600;
+            font-weight:800;
             font-size: 12px;
         }
 
@@ -69,7 +70,7 @@
             text-decoration: none;
             border: none;
             font-size: 14px;
-            font-weight: 600;
+            font-weight: 800;
             border-radius: 25px;
             cursor: pointer;
             transition: background-color 0.3s;
@@ -83,12 +84,12 @@
             background-color: #222;
             color: #00ff00;
             border: none;
-            padding: 8px 12px;
+            padding: 5px 8px;
             cursor: pointer;
             border-radius: 25px;
             transition: background-color 0.3s;
             font-weight: 600;
-            font-size: 14px;
+            font-size: 10px;
         }
 
         button:hover {
