--- a/nostrdb/index.html
+++ b/nostrdb/index.html
@@ -122,7 +122,7 @@
                 <th>Name</th>
                 <th>Date</th>
                 <th>Time</th>
-                <th>Size</th>
+                <th>Size (MB)</th>
                 <th>Download</th>
             </tr>
         </thead>
