--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label for="relayToggle">DeepSync</label>
       </div>
 
-      <a href="/nostrnet/database.html" class="db-btn">LocalDatabase</a>
+      <a href="/database.html" class="db-btn">LocalDatabase</a>
       <div id="toggleFileInput" class="toggle-button" onclick="toggleFileInput()"> <label> Restore</label></div>
 
     </div>
