Add option to use jsonl and add option to not broadcast

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
 
       <a href="/nostrdb/index.html" class="db-btn">LocalDatabase</a>
       <div id="toggleFileInput" class="toggle-button" onclick="toggleFileInput()"> <label> Restore</label></div>
-
+      <div class="toggle-button">
+        <input type="checkbox" id="jsonlToogle">
+        <label for="jsonlToogle">jsonl</label>
+      </div>
+      <div class="toggle-button">
+        <input type="checkbox" checked="true" id="broadcastToogle">
+        <label for="broadcastToogle">Broadcast</label>
+      </div>      
     </div>
 
 
